--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <form class="bookForm" action="index.html" method="post">
       <label for="bookTitle"></label>
-      <input id="bookTitle" type="text" name="" value="" placeholder="Title">
+      <input id="bookTitle" type="text" placeholder="Title">
       <label for="author"></label>
-      <input id="author" type="text" name="" value="" placeholder="Author">
+      <input id="author" type="text" placeholder="Author">
       <button type="button" name="addBook">Add</button>
     </form>
 
