Add book with js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <h1>Awesome Books</h1>
 
-    <div id="bookList" class="">
+    <div id="bookList">
       <div class="book">
         <p class="bookInfo">For Whom the Bell Tolls</p>
         <p class="bookInfo">Ernest Hemingway</p>
@@ -29,7 +29,7 @@
       <input id="bookTitle" type="text" placeholder="Title">
       <label for="author"></label>
       <input id="author" type="text" placeholder="Author">
-      <button type="button" name="addBook">Add</button>
+      <button id="addBtn" type="button" name="addBook">Add</button>
     </form>
 
   </main>
