Refactor code with classes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome Books</title>
   <link rel="stylesheet" href="index.css">
-  <script src="scripts/index.js" defer></script>
+  <script src="scripts/app.js" defer></script>
 </head>
 
 <body>
@@ -15,8 +15,8 @@
   <main>
     <h1>Awesome Books</h1>
 
-    <div id="bookList">
-    </div>
+    <table id="bookList">
+    </table>
 
     <form class="bookForm" action="index.html" method="post">
       <label for="bookTitle"></label>
