Add styles to the table

--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
   <header></header>
   <main>
     <h1>Awesome Books</h1>
-
-    <table id="bookList">
-    </table>
-
-    <form class="bookForm" action="index.html" method="post">
-      <label for="bookTitle"></label>
-      <input id="bookTitle" type="text" placeholder="Title">
-      <label for="author"></label>
-      <input id="author" type="text" placeholder="Author">
-      <button id="addBtn" type="button" name="addBook">Add</button>
-    </form>
-
+    <div class="container">
+      <table id="bookList">
+      </table>
+      <br>
+      <hr>
+      <h2>Add New Books</h2>
+      <form class="bookForm" action="index.html" method="post">
+        <label for="bookTitle"></label>
+        <input id="bookTitle" type="text" placeholder="Title">
+        <label for="author"></label>
+        <input id="author" type="text" placeholder="Author">
+        <button id="addBtn" type="button" name="addBook">Add</button>
+      </form>
+    </div>
   </main>
   <footer></footer>
 </body>
