--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <nav>
+      <span>Awesome Books</span>
+      <ul>
+        <li><a id="list" href="#">List</a></li>
+        <li>|</li>
+        <li><a id="new" href="#">Add New</a></li>
+        <li>|</li>
+        <li><a id="contact" href="#">Concact</a></li>
+      </ul>
+    </nav>
+    <div id="fecha">Fecha</div>
+  </header>
   <main>
     <h1>Awesome Books</h1>
     <div class="container">
