Add date and time

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a id="navContact" href="#">Contact</a></li>
       </ul>
     </nav>
-    <div id="fecha">Date</div>
+    <div id="fecha">TIME</div>
   </header>
   <main>
     <section id="list" >
