Fix linter errors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome Books</title>
   <link rel="stylesheet" href="index.css">
-  <script type="module" src="./scripts/app.js" defer></script>
+  <script type="module" src="./scripts/app.js"></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <li><a id="navContact" href="#">Contact</a></li>
       </ul>
     </nav>
-    <div id="fecha">TIME</div>
+    <div id="fecha"><br></div>
   </header>
   <main>
     <section id="list" >
